@@ -64,4 +64,6 @@ repository on GitHub.
 [[release-notes-6.0.1-junit-vintage-new-features-and-improvements]]
 ==== New Features and Improvements
 
-* ❓
+* Allow disabling the reporting of discovery issues by the JUnit Vintage engine (including
+  the one reported for its deprecation) by setting the new
+  `junit.vintage.discovery.issue.reporting.enabled` configuration parameter to `false`.
